edit the title and header

--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
     <head>
         <title>
-            Coursera first
+            Coursera first Project
         </title>
     </head>
     <body>
         <h1>
-            My coursera first site
+            My coursera first site to parcitce node.js
         </h1>
         <p>
             this is the first site in my coursera course
